<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intime"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:paddingLeft="10dip"
    android:paddingRight="10dip" android:paddingTop="1dip" 
    android:paddingBottom="1dip" android:background="@drawable/bg06"
    android:layout_gravity="center_vertical"
    >

<TextView android:id="@+id/total" 
		  android:layout_width="fill_parent"
          android:layout_height="55dip" 
          android:textSize="10pt"
          android:gravity="center"
          android:textColor="#FFFFFF">
    </TextView>
 
    <RelativeLayout android:layout_width="fill_parent" 
    			    android:layout_height="wrap_content" 
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical" >
    <ImageView android:id="@+id/ImageView01" 
	    android:background="@drawable/bg2"
		android:layout_width="300dip"
		android:layout_height="140dip"
		android:layout_marginTop="20dip"
		android:layout_centerHorizontal="true">
	</ImageView>
	<ImageView android:id="@+id/ImageView02" 
	    android:layout_below="@+id/ImageView01"
	    android:background="@drawable/bg2"
		android:layout_width="300dip"
		android:layout_height="140dip"
		android:layout_marginTop="20dip"
		android:layout_centerHorizontal="true">
	</ImageView>
                  
        
        <TableLayout android:layout_width="fill_parent" android:layout_height="140dip"
                     android:layout_marginTop="20dip">
                <TableRow >
                <TextView android:id="@+id/gprs" android:layout_width="fill_parent"
                          android:textSize="8pt" android:textColor="#FFFFFF">
                </TextView>
                </TableRow>    
                <TableRow android:layout_gravity="center" 
                        android:layout_width="fill_parent" android:layout_height="match_parent">
                 <TextView android:text="          " android:layout_width="80dip" 
                           android:layout_gravity="center" 
                           android:layout_height="match_parent">
                 </TextView>
                 <TextView android:text="@string/sx" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="@string/xx" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="@string/hj" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow android:layout_gravity="center"
                        android:layout_width="fill_parent" android:layout_height="match_parent">
                 <TextView android:text="@string/jt" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView  android:layout_width="80dip" android:id="@+id/Gjts" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView  android:layout_width="80dip" android:id="@+id/Gjtx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView  android:layout_width="80dip" android:id="@+id/Gjtz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow android:layout_gravity="center"
                        android:layout_width="fill_parent" android:layout_height="match_parent">
                 <TextView android:text="@string/bz" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbzs" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbzx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbzz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow android:layout_gravity="center"
                        android:layout_width="fill_parent" android:layout_height="match_parent">
                 <TextView android:text="@string/by" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbys" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbyx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/Gbyz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <!-- 
              <TableRow android:layout_gravity="center"
                        android:layout_width="fill_parent" android:layout_height="match_parent">
              <TextView android:text="@string/yy" android:layout_weight="1" android:textColor="#FFFFFF"></TextView>
              <TextView android:text="1" android:layout_weight="1" android:textColor="#FFFFFF"></TextView>
              <TextView android:text="@string/sy" android:layout_weight="1" android:textColor="#FFFFFF"></TextView>
              <TextView android:text="1y" android:layout_weight="1" android:textColor="#FFFFFF"></TextView>
              </TableRow>
               -->
        </TableLayout>
       
           <TableLayout android:layout_width="fill_parent" android:layout_height="match_parent"
                        android:layout_below="@+id/ImageView01" android:layout_marginTop="20dip">
              <TableRow>
              <TextView android:id="@+id/wifi" android:layout_width="fill_parent"
                     android:layout_height="wrap_content" android:textSize="8pt"
                     android:textColor="#FFFFFF"
                     >
           </TextView>   
              </TableRow>
           
              <TableRow>
                 <TextView android:text="        "  android:layout_width="80dip">
                 </TextView>
                 <TextView android:text="@string/sx" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="@string/xx" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="@string/hj" android:layout_width="80dip" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow>
                 <TextView android:text="@string/jt" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_jts" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_jtx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_jtz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow>
                 <TextView android:text="@string/bz" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_bzs" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_bzx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_bzz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              <TableRow>
                 <TextView android:text="@string/by" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_bys" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_byx" android:textColor="#FFFFFF">
                 </TextView>
                 <TextView android:text="1" android:layout_width="80dip" android:id="@+id/wifi_byz" android:textColor="#FFFFFF">
                 </TextView>
              </TableRow>
              
        </TableLayout>       
        </RelativeLayout>
   
    
</LinearLayout>
